Refer to correct FeedBurner link.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author :
   email : hello@benlimmer.com
   github : l1m5
   twitter : l1m5
-  feedburner : feedname
+  feedburner : BenLimmer
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
