--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author :
   email : hello@benlimmer.com
   github : l1m5
   twitter : l1m5
+  googleplus: +BenLimmer
   feedburner : BenLimmer
 
 # The production_url is only used when full-domain names are needed
