--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author:
   github: blimmer
   twitter: l1m5
   googleplus: +BenLimmer
+description: "A software engineering blog written by Ben Limmer. Topics include EmberJS, software development best-practices, automated testing and more."
 
 production_url: http://benlimmer.com
 
