--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   googleplus: +BenLimmer
 description: "A software engineering blog written by Ben Limmer. Topics include EmberJS, software development best-practices, automated testing and more."
 
-production_url: http://benlimmer.com
+production_url: https://benlimmer.com
 
 defaults:
   -
