--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author:
   googleplus: +BenLimmer
 description: "A software engineering blog written by Ben Limmer. Topics include EmberJS, software development best-practices, automated testing and more."
 
+url: https://benlimmer.com
 production_url: https://benlimmer.com
 permalink: pretty
 
