Improve deployment with s3deploy and role.

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,9 @@ defaults:
       type: posts   # limit to posts
     values:
       is_post: true # automatically set is_post=true for all posts
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - deploy.sh
+  - node_modules
