Remove twitter, add keybase

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author:
   name: Ben Limmer
   email: hello@benlimmer.com
   github: blimmer
-  twitter: l1m5
+  keybase: blimmer
 description: "A software engineering blog written by Ben Limmer. Topics include EmberJS, software development best-practices, automated testing and more."
 
 url: https://benlimmer.com
