--- a/.s3deploy.yml
+++ b/.s3deploy.yml
@@ -1,5 +1,5 @@
 routes:
-  - route: '^(css|js)\/.*-.*\.(css|js)$'
+  - route: "^.+-.+\\.(js|css)$"
     # cache md5-summed css and js assets for 1 year
     headers:
       Cache-Control: "max-age=31536000, public"
