--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ben Limmer
-tagline: "Software Developer in Denver, Colorado, USA"
+tagline: "Software Engineer and Architect"
 author:
   name: Ben Limmer
   email: hello@benlimmer.com
