--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,6 @@ jobs:
         run: bundle exec jekyll b
       - name: Deploy site
         if: ${{ github.ref == 'refs/heads/feature/deploy-on-merge-to-master' }}
-        run: echo 'hi!'
+        run: |
+          go get -u -v github.com/bep/s3deploy
+          ./deploy.sh
