--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
         run: bundle exec jekyll b
       - name: Deploy site
         if: ${{ github.ref == 'refs/heads/feature/deploy-on-merge-to-master' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           export GOPATH=~/go
           go get -u -v github.com/bep/s3deploy
