--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      # - uses: actions/checkout@v2
       - name: Deep Clone
         if: ${{ github.ref == 'refs/heads/bug/gh-issue-30' }}
         uses: actions/checkout@v2
