update default page description

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: Ben Limmer
-tagline: "Software Engineer and Architect"
+tagline: "Freelance Architect and Software Engineer"
 author:
   name: Ben Limmer
   email: hello@benlimmer.com
   github: blimmer
   keybase: blimmer
 description:
-  "A software engineering blog written by Ben Limmer. Topics include EmberJS, software development best-practices,
-  automated testing and more."
+  "Ben Limmer is a freelance architect specializing in Developer Tools & Experience, Cloud Computing, Front-End and
+  Back-End Development and speaking engagements."
 
 url: https://benlimmer.com
 production_url: https://benlimmer.com
