chore: devops in site description

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ author:
   github: blimmer
   keybase: blimmer
 description:
-  "Ben Limmer is a freelance architect specializing in Developer Tools & Experience, Cloud Computing, Front-End and
-  Back-End Development and speaking engagements."
+  Ben Limmer is a freelance software engineer specializing in DevOps and Developer Experience. Looking for a DevOps
+  consultant? Get in touch today!
 
 url: https://benlimmer.com
 production_url: https://benlimmer.com
