--- a/package.json
+++ b/package.json
@@ -7,9 +7,29 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint \"src/**/*.{ts,tsx,astro,mdx}\"",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "astro": "^5.7.5"
+  },
+  "devDependencies": {
+    "eslint": "^9.25.1",
+    "eslint-plugin-astro": "^1.3.1",
+    "husky": "^9.1.7",
+    "imageoptim-cli": "^3.1.9",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "typescript": "^5.8.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,astro,md,mdx}": "eslint --cache --fix",
+    "*.{ts,tsx,astro,css,md,mdx}": "prettier --write",
+    "*.{jpg,jpeg,png}": "imageoptim",
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
