--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3"
   },
   "lint-staged": {
