--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/eslint-plugin-jsx-a11y": "^6",
     "@typescript-eslint/parser": "^8.31.0",
     "eslint": "^9.25.1",
