--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.2.6",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "tailwindcss": "^4.1.4"
