--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@astrojs/mdx": "^4.2.6",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "temporal-polyfill": "^0.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
