--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^4.2.6",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
+    "astro-expressive-code": "^0.41.2",
     "tailwindcss": "^4.1.4",
     "temporal-polyfill": "^0.3.0"
   },
