--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
+    "@astrojs/rss": "^4.0.11",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "astro-expressive-code": "^0.41.2",
