--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
     "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.3.1",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "astro-expressive-code": "^0.41.2",
