--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint-plugin-jsx-a11y": "^6",
+    "@types/node": "^22.15.14",
     "@typescript-eslint/parser": "^8.31.0",
     "eslint": "^9.25.1",
     "eslint-plugin-astro": "^1.3.1",
