--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "astro-expressive-code": "^0.41.2",
+    "schema-dts": "^1.1.5",
     "tailwindcss": "^4.1.4",
     "temporal-polyfill": "^0.3.0"
   },
