--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,13 +8,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .tool-versions
-      - name: Enable corepack
-        run: corepack enable
-      - name: Install dependencies
-        run: yarn install
+      - name: Bootstrap
+        uses: ./.github/actions/bootstrap
       - name: Build site
         run: yarn build
