--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,12 @@
+name: Deploy
 on:
   push:
     branches:
       - main
+
+permissions:
+  id-token: write # required for OIDC role assumption
+  contents: read
 
 jobs:
   deploy:
