--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,10 @@ jobs:
         with:
           role-to-assume: ${{ secrets.DEPLOYMENT_ROLE_ARN }}
           aws-region: us-east-1
-      - name: Deploy to S3
+      - name: Deploy immutable assets to S3 with cache-control headers
+        run: |
+          aws s3 sync --delete --cache-control "max-age=31536000,immutable" ./dist/_assets/ ${{ secrets.S3_BUCKET_URL}}/_assets/
+      - name: Deploy remaining files to S3
         run: aws s3 sync --delete ./dist/ ${{ secrets.S3_BUCKET_URL}}
       - name: Invalidate CloudFront Distribution
         run: |
