fix: pass branch during preview build

--- a/.github/workflows/deployPreview.yml
+++ b/.github/workflows/deployPreview.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Bootstrap
         uses: ./.github/actions/bootstrap
       - name: Build Site
-        run: yarn build
+        run: GITHUB_BRANCH=${{ env.BRANCH_NAME }} yarn build
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
