--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "3.4.0",
