--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,35 @@ jobs:
         uses: ./.github/actions/bootstrap
       - name: Check site
         run: yarn astro check  --minimumFailingSeverity hint
+  playwright:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Bootstrap
+      uses: ./.github/actions/bootstrap
+    - name: Get installed Playwright version
+      id: playwright-version
+      run: |
+        echo "version=$(node -e "console.log(require('./package.json').devDependencies['@playwright/test'])")" >> $GITHUB_OUTPUT
+    - name: Get Ubuntu version
+      id: ubuntu-version
+      run: echo "version=$(lsb_release -rs)" >> $GITHUB_OUTPUT
+    - name: Cache Playwright Browsers
+      uses: actions/cache@v4
+      with:
+        path: /home/runner/.cache/ms-playwright
+        key: ${{ runner.os }}-${{ steps.ubuntu-version.outputs.version }}-playwright-browsers-${{ steps.playwright-version.outputs.version }}-${{ hashFiles('playwright.config.ts') }}
+        restore-keys: |
+          ${{ runner.os }}-${{ steps.ubuntu-version.outputs.version }}-playwright-browsers-${{ steps.playwright-version.outputs.version }}
+    - name: Install Playwright Browsers
+      run: yarn playwright install --with-deps
+    - name: Run Playwright tests
+      run: yarn playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
