--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,8 @@ jobs:
           ${{ runner.os }}-${{ steps.ubuntu-version.outputs.version }}-playwright-browsers-${{ steps.playwright-version.outputs.version }}
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps
+    - name: Build site
+      run: yarn build
     - name: Run Playwright tests
       run: yarn playwright test
     - uses: actions/upload-artifact@v4
