--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "4.3.0",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "3.4.0",
+    "@astrojs/mdx": "4.3.3",
+    "@astrojs/rss": "4.0.12",
+    "@astrojs/sitemap": "3.4.2",
     "@tailwindcss/vite": "^4.1.8",
-    "astro": "5.8.1",
+    "astro": "5.12.9",
     "astro-expressive-code": "^0.41.2",
     "schema-dts": "^1.1.5",
     "tailwindcss": "^4.1.8",
